--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
 project(Villainous)
+include(FetchContent)
+FetchContent_Declare(yaml-cpp GIT_REPOSITORY https://github.com/jbeder/yaml-cpp.git)
+FetchContent_Declare(enet GIT_REPOSITORY https://github.com/lsalzman/enet.git)
+FetchContent_MakeAvailable(yaml-cpp enet)
 
 file(GLOB_RECURSE SRCS src/*.cxx)
 add_executable(villainous ${SRCS})
@@ -10,14 +14,9 @@ file(COPY extensions DESTINATION .)
 install(TARGETS villainous DESTINATION villainous/bin)
 install(DIRECTORY extensions DESTINATION villainous/bin)
 
-include(FetchContent)
-
-FetchContent_Declare(
-    yaml-cpp
-    GIT_REPOSITORY https://github.com/jbeder/yaml-cpp.git
-)
-FetchContent_GetProperties(yaml-cpp)
-FetchContent_Populate(yaml-cpp)
-add_subdirectory(${yaml-cpp_SOURCE_DIR} ${yaml-cpp_BINARY_DIR})
+# 3rd party
 target_link_libraries(villainous PUBLIC yaml-cpp::yaml-cpp)
 target_include_directories(villainous PUBLIC ${yaml-cpp_SOURCE_DIR}/include/yaml-cpp)
+
+target_link_libraries(villainous PUBLIC enet)
+target_include_directories(villainous PUBLIC ${enet_SOURCE_DIR}/include)
