GUI window and regular pulling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(Villainous)
 include(FetchContent)
 FetchContent_Declare(yaml-cpp GIT_REPOSITORY https://github.com/jbeder/yaml-cpp.git)
 FetchContent_Declare(enet GIT_REPOSITORY https://github.com/lsalzman/enet.git)
-FetchContent_MakeAvailable(yaml-cpp enet)
+FetchContent_Declare(SFML GIT_REPOSITORY https://github.com/SFML/SFML.git GIT_TAG 2.6.x)
+FetchContent_MakeAvailable(yaml-cpp enet SFML)
 
 file(GLOB_RECURSE SRCS src/*.cxx)
 add_executable(villainous ${SRCS})
@@ -15,8 +16,12 @@ install(TARGETS villainous DESTINATION villainous/bin)
 install(DIRECTORY extensions DESTINATION villainous/bin)
 
 # 3rd party
-target_link_libraries(villainous PUBLIC yaml-cpp::yaml-cpp)
-target_include_directories(villainous PUBLIC ${yaml-cpp_SOURCE_DIR}/include/yaml-cpp)
+target_link_libraries(villainous PRIVATE yaml-cpp::yaml-cpp)
+target_include_directories(villainous PRIVATE ${yaml-cpp_SOURCE_DIR}/include/yaml-cpp)
 
-target_link_libraries(villainous PUBLIC enet)
-target_include_directories(villainous PUBLIC ${enet_SOURCE_DIR}/include)
+target_link_libraries(villainous PRIVATE enet)
+target_include_directories(villainous PRIVATE ${enet_SOURCE_DIR}/include)
+
+# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+# option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
+target_link_libraries(villainous PRIVATE sfml-graphics)
